Fix jump master image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <!-- The navigation bar at the top -->
-    <img id="permission-icon" src="../media/images/jumpmaster.png"></img>
+    <img id="permission-icon" src="media/images/jumpmaster.png"></img>
     <div id="navbar">
         <button class="tab"><p>Apex Roulette</p></button>
         <button class="selected tab"><p>Lobby</p></button>
