Finish adding legends

--- a/index.html
+++ b/index.html
@@ -69,19 +69,53 @@
         </div>
    </div>
 
+   <!-- The legend screen -->
    <div id="legend-screen">
         <div id="legend-container">
+
+            <h1 id="legend-name">Bloodhound</h1>
+            <p id="legend-description">Technological Tracker</p>
+
+            <!-- Top row of legends -->
             <div class="legend-row">
                 <div class="legend-button"><img src="media/images/legends/bloodhound.png"></img></div>
                 <div class="legend-button"><img src="media/images/legends/gibraltar.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/lifeline.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/pathfinder.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/wraith.png"></img></div>
             </div>
-            <div class="legend-row">
 
+            <!-- Second row of legends -->
+            <div class="legend-row">
+                <div class="legend-button"><img src="media/images/legends/bangalore.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/caustic.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/mirage.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/octane.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/wattson.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/crypto.png"></img></div>
             </div>
-            <div class="legend-row">
 
+            <!-- Third row of legends -->
+            <div class="legend-row">
+                <div class="legend-button nolegend"><img src="media/images/legends/nolegend.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/revenant.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/loba.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/rampart.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/horizon.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/fuse.png"></img></div>
+            </div>
+
+            <!-- Bottom row of legends -->
+            <div class="legend-row">
+                <div class="legend-button nolegend"><img src="media/images/legends/nolegend.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/valkyrie.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/seer.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/ash.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/madmaggie.png"></img></div>
+                <div class="legend-button"><img src="media/images/legends/newcastle.png"></img></div>
             </div>
         </div>
+        <img id="legend-image" src="media/images/legends/bloodhoundbody.png"/>
    </div>
 
 </body>
